--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-color: tan;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,30 +9,61 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+img {
+  width: 250px;
+  padding: 10px;
+}
+
+.add-form {
   display: flex;
   flex-direction: column;
+  padding: 20px;
+  background-color: gold;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: monospace;
+  font-size: 1rem;
+  padding-left: 3rem;
+  border:outset;
+  border-radius: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.name {
+  display: flex;
+  flex-direction: row;
+  padding: 30px;
+  padding-left: 20rem;
+  align-items: center;
+  font-family: monospace;
+  font-size: 1rem;
+  background-color:slategray;
+  font-family: monospace;
+  border-radius: 2rem;
+  border:outset;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-family:cursive;
+  font-size: 3rem;
+  border-radius: 2rem;
+  border:outset;
+  background-color:teal;
+  color: aliceblue;
 }
 
-img {
-  width: 200px;
+.menu {
+  font-family: monospace;
+  font-size: 1rem;
+  padding: 30px;
+  background-color: lightgrey;
+  border:outset;
+  border-radius: 2rem;
+}
+
+.instructions {
+  background-color:goldenrod;
+  padding: 20px;
+  font-family: monospace;
+  font-size: 1rem;
+  border:outset;
+  border-radius: 3rem;
 }
